--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,5 @@
 ################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
-/.vs/*
-/*/bin/*
-/*/obj/*
-/packages
-*.user
-/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.*
-.DS_Store
-npm-debug.log
-yarn-error.log
-
-/Afisha.Frontend/node_modules
-/Afisha.Frontend/wwwroot/css
-/Afisha.Frontend/wwwroot/js
-/Afisha.Frontend/jsdoc
-/.sonarqube/out/.sonar
-/.sonarqube
-*.Cache
-*.idea
-*.orig
-.smbdelete*
-Afisha.Frontend/stats.json
-/node_modules/.yarn-integrity
-/package-lock.json
-/yarn.lock
+**/*/node_modules
+**/*/package-lock.json
