--- a/src/js/package.json
+++ b/src/js/package.json
@@ -1,10 +1,11 @@
 {
   "name": "graphql.csharp.generator",
-  "version": "1.0.1-alpha",
+  "version": "1.0.4-alpha",
   "description": "",
   "main": "",
-  "scripts": {
-    "gql-gen-csharp": "gql-gen --config ./default.yml"
+  "bin": { "gql-gen-csharp" : "index.js" },
+  "scripts": {    
+    "gen": "gql-gen"
   },
   "author": "Toxu4",
   "license": "MIT",
