--- a/src/js/package.json
+++ b/src/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql.csharp.generator",
-  "version": "1.0.9-alpha",
+  "version": "1.0.10-beta",
   "description": "C# code generator for GraphQL schema and query",
   "main": "",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "author": "Toxu4",
   "license": "MIT",
-  "keywords": ["graphql","c#","cshapr","codegen"],
+  "keywords": ["graphql","c#","csharp","codegen"],
   "dependencies": {
     "commander": "^2.19.0",
     "graphql": "^14.1.1",
