--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 **/*/node_modules
 **/*/package-lock.json
+**/*/.idea/**/*
+**/*/bin/**/*
+**/*/obj/**/*
