--- a/sample/GraphQlServer/GraphQlServer.csproj
+++ b/sample/GraphQlServer/GraphQlServer.csproj
@@ -5,11 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="wwwroot\"/>
+        <Folder Include="wwwroot\" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App"/>
+        <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.4.0" />
+        <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.4.0" />
+        <PackageReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
 </Project>
