--- a/version.props
+++ b/version.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
         <VersionPrefix>1.0.15</VersionPrefix>
-        <VersionSuffix>beta</VersionSuffix>
+        <VersionSuffix></VersionSuffix>
     </PropertyGroup>
 </Project>
